# fsm

./: .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE  README.md
cmake/: StrictWarnings.cmake
examples/: BUILD.bazel  CMakeLists.txt  example.cpp
include/fsm/: fsm.hpp
